--- a/index.html
+++ b/index.html
@@ -9,23 +9,24 @@
 <body>
     <header>
         <div class="header-content">
+            <div class="header-description">
             <figure>
-                <figcaption>Jessica<span> John</span></figcaption>
-    
+                <figcaption>Author<span> </span></figcaption>
                 <img src="assets/portrait1.jpg" alt="Jessica John" />
             </figure>
             <h1>About me</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed consectetur, dolor non commodo rutrum, nunc urna dictum nunc, at bibendum mi purus non justo. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Nulla facilisi.</p>
-            <div class="header-links">
-                <a href="https://github.com/" target="_blank" rel="noopener noreferrer">
-                    <img src="assets/github.svg" alt="GitHub" class="icon" />
-                </a>
-                <a href="https://linkedin.com/" target="_blank" rel="noopener noreferrer">
-                    <img src="assets/linkedin.svg" alt="Linkedin" class="icon" />
-                </a>
-                <a href="https://x.com/" target="_blank" rel="noopener noreferrer">
-                    <img src="assets/x.svg" alt="X" class="icon" />
-                </a>
+                <div class="header-links">
+                    <a href="https://github.com/" target="_blank" rel="noopener noreferrer">
+                        <img src="assets/github.svg" alt="GitHub" class="icon github" />
+                    </a>
+                    <a href="https://linkedin.com/" target="_blank" rel="noopener noreferrer">
+                        <img src="assets/linkedin.svg" alt="Linkedin" class="icon linkedin" />
+                    </a>
+                    <a href="https://x.com/" target="_blank" rel="noopener noreferrer">
+                        <img src="assets/x.svg" alt="X" class="icon x" />
+                    </a>
+                </div>
             </div>
         </div>
     </header>
@@ -154,7 +155,7 @@
                 </a>
             </div>
         </div>
-        <img src="assets/portrait2.jpg" alt="Jessica John" />
+        <img src="assets/portrait2.jpg" class="footer-portrait" alt="Author" />
     </footer>
 </body>
 </html>
