--- a/index.html
+++ b/index.html
@@ -30,8 +30,9 @@
         </div>
     </header>
     <main class="main">
-        <h2>My Work</h2>
-        <div class="all-projects">
+        <div class="wrapper">
+            <h2>My Work</h2>
+            <div class="projects">
             <div class="project">
                 <div class="photo-container">
                     <p>screenshot of project</p>
@@ -121,6 +122,7 @@
                     </div>
                     <p>short description of project.</p>
                 </div>
+            </div>
             </div>
         </div>
     </main>
