--- a/index.html
+++ b/index.html
@@ -126,8 +126,8 @@
             </div>
         </div>
     </main>
-    <footer>
-        <div>
+    <footer class="footer">
+        <div class="wrapper">
             <h2>Contact Me</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed consectetur, dolor non commodo rutrum, nunc urna dictum nunc, at bibendum mi purus non justo.</p>
             <div class="address">
@@ -156,7 +156,7 @@
                 </a>
             </div>
         </div>
-        <img src="assets/portrait2.jpg" class="footer-portrait" alt="Author" />
+        <img src="assets/portrait2.jpg" class="footer-img" alt="Author" />
     </footer>
 </body>
 </html>
